--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,10 @@
   <header>
     <nav>
       <ul class = "navigation">
-        <li><a href="../pages/index.html">Home</a></li>
-        <li><a href="../pages/portfolio.html">Portfolio</a></li>
-        <li><a href="../pages/about.html">About</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="about.html">About</a></li>
+        
       </ul>
     </nav>
   </header>
