--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,10 @@
               <i class="fa-brands fa-instagram socialmedia fa-xl"></i>
             </a></li>
     </ul>
-    <div class="standard-container">    
+    <div class="standard-container">  
+      <a class="standard-card" href="https://www.youtube.com/watch?v=vvlEZZYfe6o&list=PLR7iYdFc_OD_nlvcWpj9jcgtjLvS4yjSb">Feeling Well
+        <p class="project-description">An innovative app that helps the users understand and manage their emotional intelligence. Feeling Well allows users to easily submit their emotions by clicking on the word in the Feeling Wheel, or by manually inputting the word using a form.</p>
+      </a>
       <a class="standard-card" href="https://github.com/goldenkairos/task-list-api">Task List API
         <p class="project-description">Building a web API to organize our daily tasks and goals. We'll be able to create, read, update, and delete tasks. This API also allow users to organize and sort tasks, mark tasks as complete as well as receive feedback about their task list via Slack</p>
       </a>
@@ -52,9 +55,6 @@
       <a class="standard-card" href="https://github.com/goldenkairos/viewing-party">Viewing Party
         <p class="project-description">How to manage and organized you and your friends's online movie selections? This project works with data structures to represents the things you and your friends have watched, favorited, and want to watch in the most Pythonic fashion.</p>
     </a>
-      <a class="standard-card" href="#">Awesome Project 1
-        <p class="project-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla nec nisl sit amet erat dignissim tristique. Maecenas vulputate varius quam, quis varius mauris vehicula vitae. Suspendisse potenti.</p>
-      </a>
     </div>
     <ul class="right">
         <li class="socialmedia">
