--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
     </ul>
     <div class="standard-container">  
       <a class="standard-card" href="https://www.youtube.com/watch?v=vvlEZZYfe6o&list=PLR7iYdFc_OD_nlvcWpj9jcgtjLvS4yjSb">Feeling Well
-        <p class="project-description">An innovative app that helps the users understand and manage their emotional intelligence. Feeling Well allows users to easily submit their emotions by clicking on the word in the Feeling Wheel, or by manually inputting the word using a form.</p>
+        <p class="project-description">An interactive app that empowers the users understand and manage their emotional intelligence. Feeling Well allows users to easily submit their emotions by clicking on the word in the Feeling Wheel, or by manually inputting the word using a form.</p>
       </a>
       <a class="standard-card" href="https://github.com/goldenkairos/task-list-api">Task List API
         <p class="project-description">Building a web API to organize our daily tasks and goals. We'll be able to create, read, update, and delete tasks. This API also allow users to organize and sort tasks, mark tasks as complete as well as receive feedback about their task list via Slack</p>
