--- a/about.html
+++ b/about.html
@@ -28,9 +28,12 @@
       <p>Here are a few technologies that I have been working with during my time at ADA:</p>  
       <ul>
         <li class="skills">Python</li>
+        <li class="skills">C++</li>
+        <li class="skills">Chromium</li>
         <li class="skills">SQL</li>
+        <li class="skills">React</li>
         <li class="skills">HTML/CSS</li>
-        <li class="skills"> Upcoming: JavaScript</li>
+        <li class="skills">JavaScript</li>
       </ul>
     </main>
   </div>
