--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
   </nav>
   <div class = "intro-container">
     <header class="intro">
-      <p> Hi again! My name is Minh and I’m currently learning attending ADA Developer Academy. My goal is to create applications to improve financial education and make them more accessible for the marginalized groups such as tools for budgeting, investing and saving. <br>
+      <p> Hi again! My name is Minh and I just recently completed my apprenticeship with Microsoft Edge. I obtained full stack development foundation from ADA Developer Academy. My goal is to create applications to improve financial education and make them more accessible for the marginalized groups such as tools for budgeting, investing and saving. <br>
         Currently, I am also an owner at a bookkeeping business to support real estate investors to achieve their financial independence goals.<br>
         In my free time, if you don't see me either coding or working for my business, you will find me in the kitchen looking for the next culinary inspriration.
         </p>
     </header>
     <main class="technologies">
-      <p>Here are a few technologies that I have been working with during my time at ADA:</p>  
+      <p>Here are a some technologies that I have been experience with during my time at Microsoft and ADA:</p>  
       <ul>
         <li class="skills">Python</li>
         <li class="skills">C++</li>
