added new project and updated social media link

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
   </header>
   <h1 class="title"> My Projects</h1>   
   <div class="content">    
-    <ul class="left">
+    <!-- <ul class="left">
           <li class="socialmedia">
             <a href="https://github.com/goldenkairos">
             <i class="fa-brands fa-github fa-xl"></i>
@@ -35,8 +35,11 @@
             <a href="https://www.instagram.com/yoshi_n_cheddar/?hl=en">
               <i class="fa-brands fa-instagram socialmedia fa-xl"></i>
             </a></li>
-    </ul>
+    </ul> -->
     <div class="standard-container">  
+      <a class="standard-card" href="https://nomnom-matchup.netlify.app/">NomNom Matchup!
+        <p class="project-description">A 4x4 title based game with a modern take on the classic memory matching game. This is a great treat to test and improve your memory for food lovers. Once all the cards are matched, a fun surprise is await for you at the end.</p>
+      </a>
       <a class="standard-card" href="https://www.youtube.com/watch?v=vvlEZZYfe6o&list=PLR7iYdFc_OD_nlvcWpj9jcgtjLvS4yjSb">Feeling Well
         <p class="project-description">An interactive app that empowers the users to understand and manage their emotional intelligence. Feeling Well allows users to easily submit their emotions by clicking on the word in the Feeling Wheel, or by manually inputting the word using a form.</p>
       </a>
@@ -48,22 +51,19 @@
       </a>
       <a class="standard-card" href="https://github.com/goldenkairos/swap-meet">Swap Meet
         <p class="project-description">An app where vendors can swap items between different inventories. Within this app, vendors will be able to swap their top item and swap items by category. </p>
-      </a>
-      <a class="standard-card" href="https://github.com/goldenkairos/adagrams-py">Adagrams
-        <p class="project-description">This is a team project to create a game in which a player is given a random set of letters and must make an anagram using those letters. Each submitted word will score points.</p><br>
-      </a>      
+      </a>  
       <a class="standard-card" href="https://github.com/goldenkairos/viewing-party">Viewing Party
         <p class="project-description">How to manage and organized you and your friends's online movie selections? This project works with data structures to represents the things you and your friends have watched, favorited, and want to watch in the most Pythonic fashion.</p>
     </a>
     </div>
-    <ul class="right">
+    <!-- <ul class="right">
         <li class="socialmedia">
           <a href="mailto:minh.seikel@gmail.com">minh.seikel@gmail.com</a></li>        
-    </ul>
+    </ul> -->
     
   </div>
   <footer>
-    <nav class="adj">
+    <nav>
       <ul>
         <li class = "socialmedia">
           <a href="https://github.com/goldenkairos">
@@ -76,7 +76,7 @@
           <a href="https://www.instagram.com/yoshi_n_cheddar/?hl=en">
             <i class="fa-brands fa-instagram socialmedia fa-xl"></i></a></li>
       </ul>
-      <p class="designedby" > © Designed & Built by Minh Seikel © </p>
+      <!-- <p class="designedby" > © Designed & Built by Minh Seikel © </p> -->
     </nav>
     <p id="copyright"> © Designed & Built by Minh Seikel © </p>
   </footer>
